# SSR-with-Rust

./: Dockerfile  readme.md
backend/: Cargo.toml  index.html
backend/src/: main.rs
frontend/: Cargo.toml  Trunk.toml  index.html  style.css
frontend/src/: lib.rs  main.rs
